# DevCommand

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
devcommand/: __init__.py  __version__.py  app.py  app.tcss  cli.py
devcommand/config/: __init__.py  settings.py  themes.py
devcommand/core/: __init__.py  app_state.py  base_panel.py  base_plugin.py  base_service.py  event_bus.py  platform.py  scheduler.py  state.py
devcommand/models/: __init__.py  docker.py  git.py  health.py  system.py  todo.py
devcommand/panels/: __init__.py  docker_panel.py  git_panel.py  server_panel.py  system_panel.py  todo_panel.py
devcommand/plugins/: __init__.py  loader.py  manifest.py  registry.py
devcommand/plugins/hello_world/: manifest.yaml  plugin.py
devcommand/services/: __init__.py  docker_service.py  git_service.py  health_service.py  system_service.py  todo_service.py
devcommand/ui/: __init__.py  layout.css
devcommand/ui/panels/: __init__.py  base.py  docker_panel.py  git_panel.py  logs_panel.py  server_panel.py  system_panel.py  todo_panel.py
devcommand/utils/: __init__.py  async_helpers.py  cache.py  logging.py  profiling.py
devcommand/widgets/: __init__.py  status_bar.py
tests/: __init__.py  conftest.py  test_config_cli.py  test_panels.py  test_plugins.py  test_scheduler.py  test_state.py
